[FIX] mail: content getting overlap over emoji icon
Steps to Reproduce : 
1. Open Email Marketing
2. Type a long text in the subject line
3. You will notice that the content gets overlapped over the emoji icon

Observed behavior:
content getting overlap over emoji icon

Expected behavior:
the content should be hidden by the emoji icon

Task-3628324

closes odoo/odoo#149706

X-original-commit: 5844d3d4b3a7e583d08d579cf6618c14f6a9221a

--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -1,9 +1,5 @@
 .o_form_view .o_mass_mailing_mailing_form,
 .o_legacy_form_view.o_mass_mailing_mailing_form {
-    input.o_field_char.o_field_widget {
-        padding-right: 40px; // Avoid overlapping subject text on emoji widget
-    }
-
     .o_notebook .tab-content .tab-pane .o_mail_body {
         // cancel the padding of the form_sheet
         margin-top: -$o-sheet-cancel-hpadding;
